<resources>
    <string name="app_name">StockDocs</string>
    <string name="action_notification">Notifications</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="search">Search</string>
    <string name="rest">Menu</string>
    <string name="my_profile">My Profile</string>
    <string name="about">About</string>
    <string name="house_rules">House Rules</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
